# ConstraintGeometry

./: .gitlab-ci.yml  CMakeLists.txt  ConstraintGeometry.doc  ConstraintGeometry.test  ConstraintGeometryConfig.cmake.in  ConstraintGeometryPluginConfig.cmake.in  ConstraintGeometryTest.xml  README.md  constraintGeometry.h  initPlugin.cpp  readme.odt
.github/workflows/: ci.yml
ConstraintGeometryTest_test/scenes/: liver.ref  liver.ref.success  liver.scn.ref  liver.scn.ref.success
scene/: beamContact.scn
scenes/: beamContact.scn  beamContact.scn.qglviewer.view  liver.scn
src/: BaseGeometry.cpp  BaseGeometry.h  BezierTriangleGeometry.h  BezierTriangleGeometry.inl  BezierTriangleNonLinearInterpolation.cpp  BezierTriangleNonLinearInterpolation.h  BezierTriangleNonLinearInterpolation.inl  ColisionAlgorithmFindClosestPoint.cpp  CollisionAlgorithm.h  Constraint.cpp  Constraint.h  ConstraintCollisionAlgorithms.h  ConstraintGeometry.h  ConstraintGeometry.inl  ConstraintNormal.h  ConstraintProximity.h  ConstraintProximity.inl  ConstraintResponse.cpp  ConstraintResponse.h  ConstraintResponse.inl  EdgeGeometry.cpp  EdgeGeometry.h  EdgeGeometry.inl  EdgeInterpolation.h  EdgeLinearInterpolation.cpp  EdgeLinearInterpolation.h  EdgeLinearInterpolation.inl  FullTriangleLinearInterpolation.cpp  FullTriangleLinearInterpolation.h  FullTriangleLinearInterpolation.inl  PlaneCutting.cpp  PlaneCutting.h  PlaneCutting.inl  PointGeometry.cpp  PointGeometry.h  PointGeometry.inl  PointLinearInterpolation.cpp  PointLinearInterpolation.h  PointLinearInterpolation.inl  Response.h  (+20 more)
src/ConstraintGeometry/: BaseConstraint.h  BaseNormalHandler.h  ConstraintDirection.h  ConstraintNormal.h  ConstraintProximity.h  ConstraintResponse.h  InternalConstraint.h  config.h.in  initConstraintGeometry.cpp  initConstraintGeometry.h  initPlugin.cpp
src/ConstraintGeometry/constraint/: BilateralResolution.h  ConstraintBilateral.cpp  ConstraintBilateral.h  ConstraintInsertion.cpp  ConstraintInsertion.h  ConstraintUnilateral.cpp  ConstraintUnilateral.h  InsertionResolution.h  UnilateralResolution.h
src/ConstraintGeometry/directions/: BindDirection.cpp  BindDirection.h  ContactDirection.cpp  ContactDirection.h  FirstDirection.cpp  FirstDirection.h  FixedFrameDirection.cpp  FixedFrameDirection.h  SecondDirection.cpp  SecondDirection.h
src/ConstraintGeometry/normalHandler/: EdgeNormalHandler.cpp  EdgeNormalHandler.h  GouraudTriangleNormalHandler.cpp  GouraudTriangleNormalHandler.h  GravityPointNormalHandler.cpp  GravityPointNormalHandler.h  PhongTriangleNormalHandler.cpp  PhongTriangleNormalHandler.h  VectorPointNormalHandler.cpp  VectorPointNormalHandler.h
src/ConstraintGeometry/operations/: ConstraintProximityOperation.h
src/algorithm/: CollisionDetectionAlgorithm.h  CollisionDetectionAlgorithm.inl  PointCloudBindingAlgorithm.h  PointCloudBindingAlgorithm.inl
src/constraint/: BilateralContactConstraint.cpp  BilateralContactConstraint.h  ConstraintPair.cpp  ConstraintPair.h  UnilateralContactConstraint.cpp  UnilateralContactConstraint.h
src/forcefield/: CollisionForceField.cpp  CollisionForceField.h
src/geometry/: AABBGeometry.h  AABBGeometry.inl  BezierTriangleGeometry.h  BezierTriangleGeometry.inl  EdgeGeometry.cpp  EdgeGeometry.h  EdgeGeometry.inl  PointGeometry.h  PointGeometry.inl  TriangleGeometry.h  TriangleGeometry.inl
src/response/: BilateralResponse.cpp  BilateralResponse.h  UnilateralResponse.cpp  UnilateralResponse.h  UnilateralResponse.h.autosave
src/sofa/constraintGeometry/: BaseConstraint.h  BaseDirection.h  BaseNormalHandler.h  BaseResponse.h  Constraint.cpp  Constraint.h  ConstraintDirection.h  ConstraintGenerator.cpp  ConstraintGenerator.h  ConstraintNormal.h  ConstraintProximity.cpp  ConstraintProximity.h  ConstraintProximityOperation.h  ConstraintResponse.h  GenericConstraint.cpp  GenericConstraint.h  InternalConstraint.h  initPlugin.cpp
src/sofa/constraintGeometry/constraint/: BilateralResolution.h  BilateralResponse.cpp  BilateralResponse.h  ConstraintB.cpp  ConstraintB.h  ConstraintBBB.cpp  ConstraintBBB.h  ConstraintBilateral.cpp  ConstraintBilateral.h  ConstraintContact.cpp  ConstraintContact.h  ConstraintFBB.cpp  ConstraintFBB.h  ConstraintInsertion.cpp  ConstraintInsertion.h  ConstraintPFF.cpp  ConstraintPFF.h  ConstraintProjective2D.cpp  ConstraintProjective2D.h  ConstraintU.cpp  ConstraintU.h  ConstraintUFF.cpp  ConstraintUFF.h  ConstraintUnilateral.cpp  ConstraintUnilateral.h  Constraintless.cpp  Constraintless.h  ContactConstraint.cpp  ContactConstraint.h  ContactReponse.cpp  ContactReponse.h  ContactResponse.cpp  ContactResponse.h  InsertionResolution.h  UnilateralConstraint.cpp  UnilateralConstraint.h  UnilateralConstraintWithFriction.cpp  UnilateralConstraintWithFriction.h  UnilateralResolution.h
src/sofa/constraintGeometry/constraintProximities/: EdgeConstraintProximity.h  GouraudConstraintProximity.h  GravityPointConstraintProximity.h  PhongConstraintProximity.h  VectorPointConstraintProximity.h
src/sofa/constraintGeometry/direction/: ContactDirection.cpp  FixedDirection.cpp
src/sofa/constraintGeometry/directions/: BindDirection.cpp  BindDirection.h  ContactDirection.cpp  ContactDirection.h  FirstDirection.cpp  FirstDirection.h  FixedFrameDirection.cpp  FixedFrameDirection.h  SecondDirection.cpp  SecondDirection.h
src/sofa/constraintGeometry/forcefield/: CollisionForceField.cpp  CollisionForceField.h
src/sofa/constraintGeometry/normalHandler/: EdgeNormalHandler.cpp  EdgeNormalHandler.h  GouraudTriangleNormalHandler.cpp  GouraudTriangleNormalHandler.h  GravityPointNormalHandler.cpp  GravityPointNormalHandler.h  PhongTriangleNormalHandler.cpp  PhongTriangleNormalHandler.h  TrajectoryNormalHandler.cpp  TrajectoryNormalHandler.h  VectorPointNormalHandler.cpp  VectorPointNormalHandler.h
src/toto/: TriangleLinearInterpolation.cpp  TriangleLinearInterpolation.h  TriangleLinearInterpolation.inl
temp/: GouraudTriangleGeometry.cpp  GravityPointGeometry.cpp  PhongTriangleGeometry.cpp  TrajectoryGeometry.cpp  VectorPointGeometry.cpp
(+33 files in other folders)
